[package]
name = "dotprint"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-embed = "8.9.0"
bdf_parser = { git = "https://github.com/mani3/bdf_parser" }
clap = { version = "4.5.51", features = ["derive"] }
